src/test/deca/syntax/valid/assign_int.deca
// Description:
//    test de l'affectation entier
// Resultats:
//   
//
// Historique:
//    cree le 22/01/2022


    
{
    int i = 1 ;


}

