src/test/deca/syntax/invalid/created/syntax/wrong_lvalue.deca
// Description:
//    test de programme avec lvalue incorrect
//
// Resultats:
//    11:4: left-hand side of assignment is not an lvalue
//
// Historique:
//    cree le 08/01/2022

{
    1 = 1 ;
}